--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 662
-subtitle: 试试
-description: 感受下github pages
-keywords:
+title: 大唐高僧刘伯温
+subtitle: 大唐高僧刘伯温
+description: 不想当军师的程序员不是一个好和尚
+keywords: 刘伯温,662,Meeko,博客,Blog
 author: Meeko
-language:
-timezone:
+language: zh-Hans
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
