--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "start": "hexo server",
+    "build": "hexo g -d"
+  },
   "hexo": {
     "version": "3.7.1"
   },
@@ -16,6 +20,7 @@
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.3.2",
+    "node-fetch": "^2.1.2"
   }
 }
