--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 大唐高僧刘伯温
+title: 「662」
 subtitle: 大唐高僧刘伯温
-description: 不想当军师的程序员不是一个好和尚
+description: 不想当和尚的程序员不是一个好军师
 keywords: 刘伯温,662,Meeko,博客,Blog
 author: Meeko
-language: zh-Hans
+language: zh-CN
 timezone: Asia/Shanghai
 
 # URL
@@ -73,7 +73,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: hueman
+theme: maupassant
 insight: true
 
 # Deployment
