--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-json-content": "^3.0.1",
+    "hexo-generator-search": "^2.2.5",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^0.3.0",
+    "hexo-renderer-pug": "^0.0.5",
+    "hexo-renderer-sass": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.3.2",
     "node-fetch": "^2.1.2"
