--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -71,6 +71,9 @@ menu:
   - page: about
     directory: about/
     icon: fa-user
+  - page: 黄历
+    directory: almanac/
+    icon: fa-calendar
   - page: guestbook
     directory: guestbook/
     icon: fa-comments
