--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -68,18 +68,18 @@ menu:
   - page: archive
     directory: archives/
     icon: fa-archive
-  - page: about
-    directory: about/
-    icon: fa-user
+  # - page: about
+  #   directory: about/
+  #   icon: fa-user
   - page: 黄历
     directory: almanac/
     icon: fa-calendar
   - page: guestbook
     directory: guestbook/
     icon: fa-comments
-  - page: rss
-    directory: atom.xml
-    icon: fa-rss
+  # - page: rss
+  #   directory: atom.xml
+  #   icon: fa-rss
 
 widgets: ## Six widgets in sidebar provided: search, category, tag, recent_posts, rencent_comments and links.
   - search
