--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "12.12.8",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "@types/react-helmet": "^5.0.14",
     "@types/react-router-dom": "^5.1.1",
     "apollo-boost": "^0.4.4",
     "classnames": "^2.2.6",
@@ -27,6 +28,7 @@
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0-next.62",
     "typescript": "^3.7.2"
