--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.1.1",
     "apollo-boost": "^0.4.4",
     "classnames": "^2.2.6",
+    "gitalk": "^1.5.0",
     "github-markdown-css": "^3.0.1",
     "graphql": "^14.5.8",
     "husky": "^3.0.9",
