--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
         run: |
           npm install
           npm run-script build
+          rm -rf build/404.html
+          cp build/index.html build/404.html
       - name: Build and Deploy
         uses: JamesIves/github-pages-deploy-action@3.0.3
         with:
