--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0-next.62",
+    "react-scripts": "^3.3.0",
     "typescript": "^3.7.2"
   },
   "scripts": {
