--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
+    "source-map-explorer": "^2.1.2",
     "typescript": "^3.7.2"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js' --html build/tree.html",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
