--- a/package.json
+++ b/package.json
@@ -5,35 +5,35 @@
   "homepage": "https://blog.baiyezi.com",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-regular-svg-icons": "^5.11.2",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.7",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-regular-svg-icons": "^5.12.1",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@types/classnames": "^2.2.9",
-    "@types/jest": "24.0.23",
-    "@types/node": "12.12.8",
-    "@types/react": "16.9.11",
-    "@types/react-dom": "16.9.4",
-    "@types/react-helmet": "^5.0.14",
-    "@types/react-router-dom": "^5.1.1",
-    "apollo-boost": "^0.4.4",
+    "@types/jest": "^25.1.2",
+    "@types/node": "^13.7.1",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-helmet": "^5.0.15",
+    "@types/react-router-dom": "^5.1.3",
+    "apollo-boost": "^0.4.7",
     "classnames": "^2.2.6",
-    "gitalk": "^1.5.0",
+    "gitalk": "^1.5.2",
     "github-markdown-css": "^3.0.1",
-    "graphql": "^14.5.8",
-    "husky": "^3.0.9",
-    "lint-staged": "^9.4.2",
+    "graphql": "^14.6.0",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.0.7",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
-    "source-map-explorer": "^2.1.2",
-    "typescript": "^3.7.2"
+    "react-scripts": "^3.4.0",
+    "source-map-explorer": "^2.2.2",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js' --html build/tree.html",
