--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
   "homepage": "https://blog.baiyezi.com",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
-    "@fortawesome/fontawesome-svg-core": "^1.2.27",
-    "@fortawesome/free-regular-svg-icons": "^5.12.1",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1",
-    "@fortawesome/react-fontawesome": "^0.1.8",
     "@types/classnames": "^2.2.9",
     "@types/jest": "^25.1.2",
     "@types/node": "^13.7.1",
@@ -16,6 +12,7 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-helmet": "^5.0.15",
     "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^4.4.3",
     "apollo-boost": "^0.4.7",
     "classnames": "^2.2.6",
     "gitalk": "^1.5.2",
@@ -33,6 +30,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "source-map-explorer": "^2.2.2",
+    "styled-components": "^5.0.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
