--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,27 @@
 {
+  "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl":".",
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
+    "target": "esnext",
     "module": "esnext",
+    "jsx": "preserve",
+    "allowJs": false,
     "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
+    "allowSyntheticDefaultImports": true,
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "removeComments": false,
+    "preserveConstEnums": true,
+    "sourceMap": true,
+    "skipLibCheck": true,
     "noEmit": true,
-    "jsx": "react"
+    "baseUrl": ".",
+    "paths": {
+      "components/*": ["src/components/*"],
+      "containers/*": ["src/containers/*"],
+      "types/*": ["types/*"]
+    },
+    "lib": ["dom", "es2015", "es2016"]
   },
-  "include": ["src"]
+  "exclude": ["artifacts/**/*", "dist/**/*", "public/**/*", "node_modules"]
 }
