--- a/package.json
+++ b/package.json
@@ -10,23 +10,29 @@
     "serve": "serve dist -p 3000 -s"
   },
   "dependencies": {
-    "@reach/router": "^1.2.1",
-    "axios": "^0.19.0",
+    "gitalk": "^1.6.0",
+    "moment": "^2.24.0",
+    "node-fetch": "^2.6.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-static": "^7.2.0",
     "react-static-plugin-reach-router": "^7.2.0",
     "react-static-plugin-sitemap": "^7.2.0",
     "react-static-plugin-source-filesystem": "^7.2.0",
-    "react-static-plugin-typescript": "^7.2.0"
+    "react-static-plugin-typescript": "^7.2.0",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
+    "@reach/router": "^1.2.1",
     "@types/node": "^12.7.2",
     "@types/reach__router": "^1.2",
     "@types/react": "^16.9.1",
     "@types/react-dom": "^16.8.5",
     "@types/react-hot-loader": "^4.1.0",
+    "@types/styled-components": "^5.0.1",
     "@types/webpack-env": "^1.14.0",
+    "apollo-boost": "^0.4.7",
+    "graphql": "^14.6.0",
     "react-hot-loader": "^4.12.11",
     "serve": "^11.1.0",
     "typescript": "^3.5.3"
